--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "h2": "^0.3.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
